@@ -307,7 +307,7 @@ CAPTION "About OpenHoldem"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            128,IDC_STATIC,11,17,20,20
-    LTEXT           "OpenHoldem Version 1.8.1",IDC_STATIC,40,10,119,8,SS_NOPREFIX
+    LTEXT           "OpenHoldem Version 1.8.2",IDC_STATIC,40,10,119,8,SS_NOPREFIX
     LTEXT           "Licensed under GPLv3",IDC_STATIC,40,25,119,8
     DEFPUSHBUTTON   "OK",IDOK,178,7,50,16,WS_GROUP
 END
@@ -522,13 +522,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     EDITTEXT        IDC_SCRAPEDELAY,106,4,28,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_SCRAPEDELAY_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,134,4,11,14
-    EDITTEXT        IDC_NAMESCRAPES,106,22,28,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_NAMESRAPES_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,134,22,11,14
-    EDITTEXT        IDC_BALANCESCRAPES,106,39,28,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_BALANCESCRAPES_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,134,39,11,14
     LTEXT           "Scrape delay (100-5000 ms)",IDC_STATIC,4,9,91,8
-    LTEXT           "Scrapes to change name (1-9)",IDC_STATIC,4,27,98,8
-    LTEXT           "Scrapes to zero balance (1-9)",IDC_STATIC,4,44,96,8
 END
 
 IDD_SAPREFS5 DIALOGEX 0, 0, 219, 155
@@ -882,12 +876,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "OpenHoldem"
             VALUE "FileDescription", "OpenHoldem"
-            VALUE "FileVersion", "1.8.1.0"
+            VALUE "FileVersion", "1.8.2.0"
             VALUE "InternalName", "OpenHoldem.exe"
             VALUE "LegalCopyright", "Licensed under GPLv3"
             VALUE "OriginalFilename", "OpenHoldem.exe"
             VALUE "ProductName", "OpenHoldem"
-            VALUE "ProductVersion", "1.8.1.0"
+            VALUE "ProductVersion", "1.8.2.0"
         END
     END
     BLOCK "VarFileInfo"
